<?xml version="1.0"?>
<package format="2">
  <name>perception</name>
  <version>0.0.0</version>
  <description>The perception package</description>
  <maintainer email="pi@todo.todo">pi</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>cv_bridge</depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>perception_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>perception_msgs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>perception_msgs</exec_depend>
</package>
