<?xml version="1.0"?>
<package format="2">
  <name>perception_msgs</name>
  <version>0.0.0</version>
  <description>The perception_msgs package</description>

  <maintainer email="pi@todo.todo">pi</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>message_generation</build_export_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
</package>
